# ebook-api

./: .env_example  Book.postman_collection.json  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs
src/book/: book_filter.rs  book_model.rs  book_response.rs  book_route.rs  mod.rs
src/database/: repo.rs
src/midlleware/: mod.rs  response_err.rs  response_ok.rs
